# Django

./: .gitignore  README.md  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: middleware.py  permissions.py  settings.py  urls.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment.py  0003_category_categorylink.py  0004_image.py
