[project]
name = "django14th"
version = "0.1.0"
description = ""
authors = [
    {name = "ziwonii",email = "nayanako03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "mysqlclient (>=2.2.8,<3.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "paramiko (<3)",
    "pillow (>=12.1.1,<13.0.0)",
    "boto3 (>=1.42.68,<2.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "drf-yasg (>=1.21.15,<2.0.0)",
]

[tool.poetry]
packages = [{include = "django14th", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
